# bctpy_mrtrix

./: .gitignore  Info_bct_all.md  QUICKSTART.md  WEB_INTERFACE_STATUS.md  bct_all_test.py  bct_nature_metrics_test.py  bct_test.py  pyproject.toml  xlsx_to_npy.py
Test_matrizen/: ._sub-119BPAF161001_ses-3_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.xlsx
Test_matrizen/bct_output/: bct_analysis_results.parquet  quality_control_report.txt
Test_matrizen/ses-1/: sub-119BPAF161001_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.npy  sub-119BPAF161001_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.xlsx  sub-119BPAF161002_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.npy  sub-119BPAF161002_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.xlsx  sub-119BPAF161003_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.npy  sub-119BPAF161003_ses-1_preproc.nii.gz.src.gz.odf.gqi.1.25.fib.gz.tt.gz.Brodmann.count.pass.connectogram.xlsx  (+2 more)
docs/: BCT_METRICS_REFERENCE.md  METRIC_SELECTION_FEATURE.md
results/: anova_results.txt  anova_results.xlsx  graph_metrics_all_sessions.xlsx
scripts/: README.md  bct_all_test.py  bct_test.py  run_web_app.ps1  run_web_app.sh  setup_env.py  setup_env.sh  xlsx_to_npy.py
theme_template/: README.md  app.py
theme_template/templates/: base.html  index.html
web_app/: README.md  app.py  bct_analyzer.py
(+28 files in other folders)
